se actualizo css

--- a/usuario/css/register.css
+++ b/usuario/css/register.css
@@ -16,8 +16,8 @@ section {
 }
 .form-box {
     position: relative;
-    width: 420px;
-    height: 530px;
+    width: 500px;
+    height: 900px;
     background: transparent;
     border: 2px solid rgba(255,255,255,0.5);
     border-radius: 20px;
@@ -86,4 +86,13 @@ button{
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
+}
+
+.alert{
+    color: #fff;
+    font-size: medium;
+}
+
+span{
+    color: #fff;
 }
