--- a/usuario/css/recuperarC.css
+++ b/usuario/css/recuperarC.css
@@ -20,7 +20,7 @@
   .form-box {
       position: relative;
       width: 400px;
-      height: 300px;
+      height: 400px;
       background: transparent;
       border: 2px solid rgba(255,255,255,0.5);
       border-radius: 20px;
@@ -90,4 +90,10 @@
       font-size: 1em;
       font-weight: 600;
   }
- 
+  .login{
+    margin-top: 30px;
+    margin-left: 35%;
+  }
+ .alert{
+    color: #fff;
+ }
